--- a/about-me.html
+++ b/about-me.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Ubuntu:300,400,700|Lora">
 
-    <title>Document</title>
+    <title>Web Responsive</title>
 </head>
 <body>
     <header>
